# music-generator

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.devmachine  Makefile  README.md  generate.sh  get_dataset.sh  nggyu22000-compressed.pt  pyproject.toml  requirements.txt  run.bat  run.sh  setup.sh  setup_apex.sh  train.sh  train_transformer.sh  train_vqvae.sh  vqcompress.sh
kubernetes/: dev-env.yml  gpu-job.yml  tensorboard-deployment.yml
secret_sauce/: main.py  notebook.ipynb  sample_to_music.ipynb  train.py
secret_sauce/config/: basic_transformer_config.py  config.py  deepspeed.json  deepspeed_other.txt  deepspeed_vqvae.json  deepspeed_zero.json  vqvae_config.py
secret_sauce/config/data/: dataset.py  disk_datasource.py
secret_sauce/dataset/: basic_compressed_dataset.py  dataset_explore.ipynb  datasources.py  songs_datamodule.py  songs_dataset.py
secret_sauce/network/basic_transformer/: transformer.py
secret_sauce/network/vqvae/: resnet.py  vector_quantizer.py  vqvae.py
secret_sauce/scripts/: generate_music.py  train.py  train_transformer.py  vqcompress.py
secret_sauce/util/: io.py  timer.py  util.py
test/: test_disk_dataset.py
