[tool.poetry]
name = "secret_sauce"
version = "0.1.0"
description = ""
authors = ["Evan Pierce <evanpierce@aim.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.8.0"
betterproto = "^1.2.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
ipykernel = "^5.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
