[tool.poetry]
name = "secret_sauce"
version = "0.1.0"
description = ""
authors = ["Evan Pierce <evanpierce@aim.com>"]

[tool.poetry.dependencies]
python = "^3.9"
betterproto = {git = "https://github.com/danielgtaylor/python-betterproto", rev = "6c1c41e9ccf7d020641e87f82e6419c3393a3841"}
google-cloud-storage = "^1.36.1"
python-dotenv = "^0.15.0"
SoundFile = "^0.10.3"
matplotlib = "^3.3.4"
hydra-core = "^1.0.6"
tqdm = "^4.60.0"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
ipykernel = "^5.5.0"
pandas = "^1.2.3"

# Currently doesnt deconflict gpu versions of pytorch
# fix for pytorch repo https://github.com/python-poetry/poetry/issues/1391#issuecomment-772200607
# [[tool.poetry.source]]
# name = "pytorch"
# url = "https://eternalphane.github.io/pytorch-pypi/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
